--- a/src/styles/InputForm.css
+++ b/src/styles/InputForm.css
@@ -1,12 +1,35 @@
+.form {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
 .sevenTileStyle {
     background: #c2853f;
     border: none;
-    border-bottom: 2px solid #975a14;
-    border-right: 2px solid #975a14;
+    border-bottom: 5px solid #975a14;
+    border-right: 5px solid #975a14;
     display: inline-block;
-    height: 50px;
-    width: 45px;
-    font-size: 30px;
+    align-items: center;
+    justify-content: center;
     text-align: center;
+    height: 10vw;
+    width: 10vw;
+    font-size: 9vw;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0px 5px 20px -10px rgba(0,0,0,0.75);
     
+}
+
+.form-button {
+    /* width: 90%; */
+    font-size: 3vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border: none;
+    background: #975a14;
+
 }
