--- a/src/styles/Result.css
+++ b/src/styles/Result.css
@@ -3,17 +3,25 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    border-bottom: 2px solid #372600;
+
 }
 
-.result-word {
-    display: inline-block;
-    margin-right: 20vw;
-    align-items: left;
-    justify-content: left;
+.word-container {
+    display: flex;
+    /* margin-right: 20vw; */
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-right: 2px solid #372600;
+
 }
 
-.result-score {
-    display: inline-block;
+.score-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 /* h1 {
