--- a/src/styles/InputForm.css
+++ b/src/styles/InputForm.css
@@ -1,35 +1,40 @@
 .form {
     align-items: center;
     justify-content: center;
-    text-align: center;
+    /* text-align: center; */
+
 }
 
 .sevenTileStyle {
     background: #c2853f;
     border: none;
-    border-bottom: 5px solid #975a14;
-    border-right: 5px solid #975a14;
-    display: inline-block;
+    border-bottom: .5vw solid #975a14;
+    border-right: .5vw solid #975a14;
+    /* display: inline-block; */
     align-items: center;
     justify-content: center;
     text-align: center;
     height: 10vw;
     width: 10vw;
     font-size: 9vw;
-    margin-right: 10px;
-    margin-bottom: 20px;
+    margin: 0 0.5vw 2vw 0.5vw;
+    /* margin-right: 1vw;
+    margin-bottom: 2vw; */
     box-shadow: 0px 5px 20px -10px rgba(0,0,0,0.75);
     
 }
 
-.form-button {
-    /* width: 90%; */
+.form-button__display {
+    background: #975a14;
+    border: none;
     font-size: 3vw;
+    text-align: center;
+    letter-spacing: 0.25vw;
+    padding: 0 15vw;
+}
+
+.form-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
-    border: none;
-    background: #975a14;
-
 }
