--- a/src/styles/ScrabbleCheatApp.css
+++ b/src/styles/ScrabbleCheatApp.css
@@ -6,24 +6,14 @@
     align-items: center;
 }
 
-.main {
-    /* height: 90vh;
-    background: #ff0000;
-    box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
-    width: 100vw;
-    margin: 0 auto; */
-}
-
 .title-container {
-    height: 10vh;
-    width: 100%;
-    background: #df9b34;
-    /* background-size: cover; */
-    display: flex;
     align-items: center;
+    background: #df9b34;
+    color: #653a0a;
+    display: flex;
+    /* height: 10vh; */
     justify-content: center;
     text-align: center;
-    color: #653a0a;
 }
 
 .form-container {
