--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,6 +1,6 @@
 body {
-    margin: auto;
-    padding: 20px;
+    /* margin: auto; */
+    /* padding: 20px; */
     justify-content: center;
     
 }
